--- a/02-HTMLTables/Exercises/01-Calendar.html
+++ b/02-HTMLTables/Exercises/01-Calendar.html
@@ -20,7 +20,7 @@
             <th>Su</th>
         </tr>
         <tr align="center">
-            <th align="right">49</th>
+            <th align="right" bgcolor="#dcdcdc">49</th>
             <td style="color: dimgray">30</td>
             <td>1</td>
             <td>2</td>
@@ -30,7 +30,7 @@
             <td style="font-weight: bold">6</td>
         </tr>
         <tr align="center">
-            <th align="right">50</th>
+            <th align="right" bgcolor="#dcdcdc">50</th>
             <td>7</td>
             <td>8</td>
             <td>9</td>
@@ -40,7 +40,7 @@
             <td style="font-weight: bold">13</td>
         </tr>
         <tr align="center">
-            <th align="right">51</th>
+            <th align="right" bgcolor="#dcdcdc">51</th>
             <td>14</td>
             <td>15</td>
             <td>16</td>
@@ -50,7 +50,7 @@
             <td style="font-weight: bold">20</td>
         </tr>
         <tr align="center">
-            <th align="right">52</th>
+            <th align="right" bgcolor="#dcdcdc">52</th>
             <td>21</td>
             <td>22</td>
             <td>23</td>
@@ -60,7 +60,7 @@
             <td style="font-weight: bold">27</td>
         </tr>
         <tr align="center">
-            <th align="right">53</th>
+            <th align="right" bgcolor="#dcdcdc">53</th>
             <td>28</td>
             <td>29</td>
             <td>30</td>
