--- a/02-HTMLTables/Exercises/01-Calendar.html
+++ b/02-HTMLTables/Exercises/01-Calendar.html
@@ -6,69 +6,79 @@
 </head>
 <body>
     <table border="1" style="border-spacing: 2px; border-collapse: separate" >
-        <tr bgcolor="#dcdcdc" style="font-size:30px"; align="center">
-            <th colspan="8">December</th>
-        </tr>
-        <tr bgcolor="#dcdcdc">
-            <th align="right">Week</th>
-            <th>Mo</th>
-            <th>Tu</th>
-            <th>We</th>
-            <th>Th</th>
-            <th>Fr</th>
-            <th>Sa</th>
-            <th>Su</th>
-        </tr>
-        <tr align="center">
-            <th align="right" bgcolor="#dcdcdc">49</th>
-            <td style="color: dimgray">30</td>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>5</td>
-            <td style="font-weight: bold">6</td>
-        </tr>
-        <tr align="center">
-            <th align="right" bgcolor="#dcdcdc">50</th>
-            <td>7</td>
-            <td>8</td>
-            <td>9</td>
-            <td>10</td>
-            <td>11</td>
-            <td>12</td>
-            <td style="font-weight: bold">13</td>
-        </tr>
-        <tr align="center">
-            <th align="right" bgcolor="#dcdcdc">51</th>
-            <td>14</td>
-            <td>15</td>
-            <td>16</td>
-            <td>17</td>
-            <td>18</td>
-            <td>19</td>
-            <td style="font-weight: bold">20</td>
-        </tr>
-        <tr align="center">
-            <th align="right" bgcolor="#dcdcdc">52</th>
-            <td>21</td>
-            <td>22</td>
-            <td>23</td>
-            <td>24</td>
-            <td>25</td>
-            <td>26</td>
-            <td style="font-weight: bold">27</td>
-        </tr>
-        <tr align="center">
-            <th align="right" bgcolor="#dcdcdc">53</th>
-            <td>28</td>
-            <td>29</td>
-            <td>30</td>
-            <td>31</td>
-            <td style="color: dimgray">1</td>
-            <td style="color: dimgray">2</td>
-            <td style="color: dimgray">3</td>
-        </tr>
+        <thead>
+            <tr bgcolor="#dcdcdc" style="font-size:30px"; align="center">
+                <th colspan="8">December</th>
+            </tr>
+            <tr bgcolor="#dcdcdc">
+                <th align="right">Week</th>
+                <th>Mo</th>
+                <th>Tu</th>
+                <th>We</th>
+                <th>Th</th>
+                <th>Fr</th>
+                <th>Sa</th>
+                <th>Su</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr >
+                <th colspan="8"><img src="images/december-solstice-winter.jpg" width="220" height="140px"/></th>
+            </tr>
+        </tfoot>
+        <tbody>
+            <tr align="center">
+                <th align="right" bgcolor="#dcdcdc">49</th>
+                <td style="color: dimgray">30</td>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+                <td>5</td>
+                <td style="font-weight: bold">6</td>
+            </tr>
+            <tr align="center">
+                <th align="right" bgcolor="#dcdcdc">50</th>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+                <td>10</td>
+                <td>11</td>
+                <td>12</td>
+                <td style="font-weight: bold">13</td>
+            </tr>
+            <tr align="center">
+                <th align="right" bgcolor="#dcdcdc">51</th>
+                <td>14</td>
+                <td>15</td>
+                <td>16</td>
+                <td>17</td>
+                <td>18</td>
+                <td>19</td>
+                <td style="font-weight: bold">20</td>
+            </tr>
+            <tr align="center">
+                <th align="right" bgcolor="#dcdcdc">52</th>
+                <td>21</td>
+                <td>22</td>
+                <td>23</td>
+                <td>24</td>
+                <td>25</td>
+                <td>26</td>
+                <td style="font-weight: bold">27</td>
+            </tr>
+            <tr align="center">
+                <th align="right" bgcolor="#dcdcdc">53</th>
+                <td>28</td>
+                <td>29</td>
+                <td>30</td>
+                <td>31</td>
+                <td style="color: dimgray">1</td>
+                <td style="color: dimgray">2</td>
+                <td style="color: dimgray">3</td>
+            </tr>
+        </tbody>
+
     </table>
 </body>
 </html>
