--- a/05-CSS-Presentation/02-SoftUniHawaiiVacation.html
+++ b/05-CSS-Presentation/02-SoftUniHawaiiVacation.html
@@ -7,25 +7,27 @@
 </head>
 <body>
 <div id="wrapper">
-
-    <img src="images/HawaiiBackground.png"/>
+    <img src="images/HawaiiBackground.png" width="100%"/>
     <div id="vladoG">
-        <img src="images/VladoGHula.png" height="350" width="265"/>
+        <img src="images/VladoGHula.png" width="200%"/>
     </div>
     <div id="petia">
-        <img src="images/PetiaHula.png" height="375" width="238"/>
+        <img src="images/PetiaHula.png" width="200%"/>
     </div>
     <div id="tedi">
-        <img src="images/TediHula.png" height="220" width="156"/>
+        <img src="images/TediHula.png" width="200%"/>
     </div>
     <div id="nakov">
-        <img src="images/NakovHula.png" height="400" width="215"/>
+        <img src="images/NakovHula.png" width="200%"/>
     </div>
     <div id="vladoK">
-        <img src="images/VladoKHula.png" height="350" width="213"/>
+        <img src="images/VladoKHula.png" width="200%"/>
     </div>
     <div id="alex">
-        <img src="images/AlexHula.png" height="375" width="238"/>
+        <img src="images/AlexHula.png" width="200%"/>
+    </div>
+    <div id="text">
+        SoftUni Hawaii Party!!!
     </div>
 </div>
 </body>
